--- a/Source/Core/Common/Common.vcxproj.filters
+++ b/Source/Core/Common/Common.vcxproj.filters
@@ -68,6 +68,7 @@
     <ClInclude Include="Src\LogManager.h">
       <Filter>Logging</Filter>
     </ClInclude>
+    <ClInclude Include="Src\stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\BreakPoints.cpp" />
@@ -117,6 +118,7 @@
     <ClCompile Include="Src\LogManager.cpp">
       <Filter>Logging</Filter>
     </ClCompile>
+    <ClCompile Include="Src\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
