--- a/Source/Core/DiscIO/DiscIO.vcxproj.filters
+++ b/Source/Core/DiscIO/DiscIO.vcxproj.filters
@@ -87,6 +87,7 @@
     <ClCompile Include="Src\VolumeWiiCrypted.cpp">
       <Filter>Volume</Filter>
     </ClCompile>
+    <ClCompile Include="Src\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\DiscScrubber.h">
@@ -155,6 +156,7 @@
     <ClInclude Include="Src\VolumeWiiCrypted.h">
       <Filter>Volume</Filter>
     </ClInclude>
+    <ClInclude Include="Src\stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
