--- a/Source/Core/DolphinWX/DolphinWX.vcxproj.filters
+++ b/Source/Core/DolphinWX/DolphinWX.vcxproj.filters
@@ -158,6 +158,7 @@
     <ClCompile Include="Src\WiimoteConfigDiag.cpp">
       <Filter>GUI</Filter>
     </ClCompile>
+    <ClCompile Include="Src\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\GLInterface\InterfaceBase.h" />
@@ -286,6 +287,7 @@
     <ClInclude Include="Src\WiimoteConfigDiag.h">
       <Filter>GUI</Filter>
     </ClInclude>
+    <ClInclude Include="Src\stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
