--- a/Source/Core/InputCommon/InputCommon.vcxproj
+++ b/Source/Core/InputCommon/InputCommon.vcxproj
@@ -84,6 +84,12 @@
     <ClCompile Include="Src\ControllerInterface\SDL\SDL.cpp" />
     <ClCompile Include="Src\ControllerInterface\XInput\XInput.cpp" />
     <ClCompile Include="Src\InputConfig.cpp" />
+    <ClCompile Include="Src\stdafx.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="Src\UDPWiimote.cpp" />
     <ClCompile Include="Src\UDPWrapper.cpp" />
   </ItemGroup>
@@ -99,11 +105,17 @@
     <ClInclude Include="Src\ControllerInterface\XInput\XInput.h" />
     <ClInclude Include="Src\GCPadStatus.h" />
     <ClInclude Include="Src\InputConfig.h" />
+    <ClInclude Include="Src\stdafx.h" />
     <ClInclude Include="Src\UDPWiimote.h" />
     <ClInclude Include="Src\UDPWrapper.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.vcxproj">
+      <Project>{2e6c348c-c75c-4d94-8d1e-9c1fcbf3efe4}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
