--- a/Source/Core/InputCommon/InputCommon.vcxproj.filters
+++ b/Source/Core/InputCommon/InputCommon.vcxproj.filters
@@ -43,6 +43,7 @@
     <ClCompile Include="Src\ControllerInterface\ExpressionParser.cpp">
       <Filter>ControllerInterface</Filter>
     </ClCompile>
+    <ClCompile Include="Src\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\ControllerEmu.h" />
@@ -74,6 +75,7 @@
     <ClInclude Include="Src\ControllerInterface\ExpressionParser.h">
       <Filter>ControllerInterface</Filter>
     </ClInclude>
+    <ClInclude Include="Src\stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
