--- a/Source/Plugins/Plugin_VideoDX11/Plugin_VideoDX11.vcxproj.filters
+++ b/Source/Plugins/Plugin_VideoDX11/Plugin_VideoDX11.vcxproj.filters
@@ -67,6 +67,7 @@
       <Filter>Render</Filter>
     </ClCompile>
     <ClCompile Include="Src\main.cpp" />
+    <ClCompile Include="Src\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\D3DBase.h">
@@ -129,5 +130,6 @@
     <ClInclude Include="Src\Globals.h" />
     <ClInclude Include="Src\main.h" />
     <ClInclude Include="Src\VideoBackend.h" />
+    <ClInclude Include="Src\stdafx.h" />
   </ItemGroup>
 </Project>
