--- a/Languages/Languages.vcxproj
+++ b/Languages/Languages.vcxproj
@@ -18,32 +18,60 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <msgfmt Include="po\ar.po" />
+    <msgfmt Include="po\ca.po" />
+    <msgfmt Include="po\cs.po" />
+    <msgfmt Include="po\de.po" />
+    <msgfmt Include="po\el.po" />
+    <msgfmt Include="po\en.po" />
+    <msgfmt Include="po\es.po" />
+    <msgfmt Include="po\fa.po" />
+    <msgfmt Include="po\fr.po" />
+    <msgfmt Include="po\he.po" />
+    <msgfmt Include="po\hu.po" />
+    <msgfmt Include="po\it.po" />
+    <msgfmt Include="po\ja.po" />
+    <msgfmt Include="po\ko.po" />
+    <msgfmt Include="po\nb.po" />
+    <msgfmt Include="po\nl.po" />
+    <msgfmt Include="po\pl.po" />
+    <msgfmt Include="po\pt.po" />
+    <msgfmt Include="po\pt_BR.po" />
+    <msgfmt Include="po\ru.po" />
+    <msgfmt Include="po\sr.po" />
+    <msgfmt Include="po\sv.po" />
+    <msgfmt Include="po\tr.po" />
+    <msgfmt Include="po\zh_CN.po" />
+    <msgfmt Include="po\zh_TW.po" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0E033BE3-2E08-428E-9AE9-BC673EFA12B5}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>Utility</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>Utility</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>Utility</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>Utility</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="po.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -66,37 +94,22 @@
     <Import Project="..\Source\VSProps\CodeGen_Release.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <OutDir>..\Binary\$(Platform)\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <OutDir>..\Binary\$(Platform)\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>..\Binary\$(Platform)\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>..\Binary\$(Platform)\</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <None Include="po\ar.po" />
-    <None Include="po\ca.po" />
-    <None Include="po\cs.po" />
-    <None Include="po\de.po" />
-    <None Include="po\el.po" />
-    <None Include="po\en.po" />
-    <None Include="po\es.po" />
-    <None Include="po\fa.po" />
-    <None Include="po\fr.po" />
-    <None Include="po\he.po" />
-    <None Include="po\hu.po" />
-    <None Include="po\it.po" />
-    <None Include="po\ja.po" />
-    <None Include="po\ko.po" />
-    <None Include="po\nb.po" />
-    <None Include="po\nl.po" />
-    <None Include="po\pl.po" />
-    <None Include="po\pt.po" />
-    <None Include="po\pt_BR.po" />
-    <None Include="po\ru.po" />
-    <None Include="po\sr.po" />
-    <None Include="po\sv.po" />
-    <None Include="po\tr.po" />
-    <None Include="po\zh_CN.po" />
-    <None Include="po\zh_TW.po" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="po.targets" />
   </ImportGroup>
 </Project>
